# physical-ai-book

./: docusaurus.config.js  package-lock.json  package.json
Hackathon-II-Phase-III/: .env.example  README.md
Hackathon-II-Phase-III/backend/: =0.2.9  pyproject.toml
Hackathon-II-Phase-III/backend/src/api/: main.py
Hackathon-II-Phase-III/backend/src/api/routes/: chat.py
Hackathon-II-Phase-III/backend/src/chat/: agent.py  mcp_client.py  persistence.py  schemas.py
Hackathon-II-Phase-III/backend/src/config/: settings.py
Hackathon-II-Phase-III/backend/src/database/: session.py
Hackathon-II-Phase-III/backend/src/mcp_server/: __init__.py  __main__.py  auth.py  config.py  database.py  server.py
Hackathon-II-Phase-III/backend/src/mcp_server/models/: __init__.py  task.py
Hackathon-II-Phase-III/backend/src/mcp_server/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
Hackathon-II-Phase-III/backend/src/models/: conversation.py  message.py
Hackathon-II-Phase-III/backend/src/utils/: errors.py
Hackathon-II-Phase-III/frontend/: package-lock.json  package.json  vite.config.ts
Hackathon_I/: README.md
Hackathon_I/docusaurus_textbook/: docusaurus.config.js
Hackathon_II/001-console-todo-app/: .gitignore
Hackthon-II-Phase-II/: .env.example  BETTER_AUTH_DECISION.md  NEON_SETUP.md  skills.md
Hackthon-II-Phase-II/frontend/: package-lock.json  package.json
Phase-III/: .gitignore  CLAUDE.md
Phase-III/backend/: alembic.ini  (+4 more)
Phase-IV/: readme.md  test_agent_chat.py  test_agent_direct.py  test_agent_integration.py
(+347 files in other folders)
